# Camera

./: CMakeLists.txt  README.md
inc/Henry/: Camera.hpp
include/HENRY/: camera.hpp
include/camera/: camera.hpp
src/: CMakeLists.txt  Camera.hpp  LinuxCamera.cpp  linux_camera.cpp
src/plat/: LinuxCamera.cpp  WindowsCamera.cpp
src/plat/linux/: linux_camera.cpp
test/: CMakeLists.txt  master_test.cpp
tests/: CMakeLists.txt  master_test.cpp
